Debugged and fixed all variants of the emulator startup: maven, ide, jar, bash, batch. None of them worked. Now everything works except jetty/jnlp. Updated documentation. Completely reworked the way of working with `spec.Main` parameters. Also had to redesign the test framework. In general, a lot of refactoring, but now everything works great.