@@ -7,30 +7,41 @@ import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 
+import static org.apache.commons.lang3.StringUtils.isEmpty;
 import static spec.Constants.*;
+import static spec.RomLoader.getFileExt;
 
 public class Main extends JFrame implements KeyListener {
 
     private Application app;
 
     public static void main(String[] args) {
-        // передается или base в серверной версии,
-        // либо файл с приложением, либо вообще ничего
+        // первый параметр - base папка с ресурсами где расположены roms
+        // второй параметр - всегда платформа lik или specialist
+        // третий параметр - файл с приложением/rom
+        // все параметры опциональны
         String base = null;
+        String platform = null;
         String rom = null;
-        if (args.length == 1) {
-            String param = args[0];
-            if (param.endsWith(".rks")) {
+        if (args.length >= 1) {
+            base = args[0];
+        }
+        if (args.length >= 2) {
+            platform = args[1];
+        }
+        if (args.length >= 3) {
+            String param = args[2];
+            if (!isEmpty(param) && !isEmpty(getFileExt(param))) {
                 rom = param;
             } else {
-                base = param;
+                throw new IllegalArgumentException("Invalid file: " + param);
             }
         }
 
-        new Main(base, rom);
+        new Main(base, platform, rom);
     }
 
-    public Main(String base, String rom) {
+    public Main(String base, String platform, String rom) {
         super("i8080 emulator");
         setMinimumSize(new Dimension(
                 SCREEN_WIDTH + BORDER_WIDTH * 2 + 15,
@@ -45,19 +56,24 @@ public class Main extends JFrame implements KeyListener {
 
         URL baseUrl = getBaseUrl(base);
         Logger.debug("Base url: " + baseUrl);
-        app = new Application(this, baseUrl);
-        if (rom != null) {
-            app.load(rom);
-        }
-        app.gotFocus();
+        app = new Application(this, baseUrl, platform, rom);
         app.start();
     }
 
     private URL getBaseUrl(String base) {
         try {
-            return base == null
-                    ? contentRoot().toURI().toURL()
-                    : new URL(base);
+            // run as Main without parameters
+            if (base == null) {
+                base = ".";
+            }
+
+            // run as jnlp web application
+            if (base.contains(":")) {
+                return new URL(base);
+            }
+
+            // run as Main class from command line
+            return new File(base).toURI().toURL();
         } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
